# GAIA-Server

./: CHANGELOG.md  CODEX_REF.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  test.yml
deploy/istio/: istio-operator.yaml  peer-authentication.yaml
deploy/k8s/: deployment.yaml  pdb.yaml  service.yaml
docs/: IPC_SPEC.md  PQC_SPEC.md
docs/governance/: GAIA-Boundary-Compliance-Header-Standard-v1.0.md  GAIA-Governance-Index-v1.0.md  GAIA-v1-Product-Boundary-Spec-v1.1.md  GAIA-v1-Scope-Matrix-v1.0.md
docs/specs/: GAIA_Inter_Process_Communication_Spec_v1.0.md  GAIA_Linux_Kernel_Modifications_Spec_v1.0.md  GAIA_Substrate_Resolution_and_Setup_Plan_v1.0.md  GAIA_Tier1_Blockers_Research_and_Implementation_Plan.md  GAIA_Tier2_Deployment_Blockers_Research_and_Implementation_Plan.md  GAIA_Tier3_Validation_Blockers_Research_and_Implementation_Plan.md
gaia_server/: __init__.py  __main__.py  codex_version.py  config.py  entrypoint.py  health.py  logging_config.py
gaia_server/inference/: __init__.py  factory.py  router.py  settings.py
gaia_server/ipc/: __init__.py  causal_broadcast.py  grpc_server.py
gaia_server/observability/: __init__.py  telemetry.py
gaia_server/planetary/: __init__.py  state_hub.py
gaia_server/restore/: __init__.py  errors.py  orchestrator.py
gaia_server/sandbox/: __init__.py  (+1 more)
tests/: test_entrypoint.py  test_planetary_state_hub.py  test_pqc_profile.py
(+20 files in other folders)
